<resources>
    <string name="app_name">save on flight</string>

    <string name="contact_email">contact_us@saveonflight.ca</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_search">Search for Flights</string>
    <string name="title_activity_view_flights">Flights</string>
    <string name="title_activity_checkin">Check in</string>

    <!-- Common Words -->
    <string name="common_login">Login</string>
    <string name="common_signup">Sign Up</string>

    <!-- Toast Messages -->
    <string name="toast_coming_soon">%1$s feature coming soon!</string>
    <string name="toast_mandatory_field">%1$s is invalid!</string>
    <string name="toast_no_result">No flights were found with these criterias!</string>
    <string name="toast_flight_picked">Flight %1$s chosen.</string>

    <!-- Home Activity -->
    <string name="home_greeting">Welcome %1$s!</string>
    <string name="home_signin">Click here to login/sign up</string>

    <!-- Search Activity -->
    <string-array name="trip_type">
        <item>Return</item>
        <item>One Way</item>
    </string-array>
    <string-array name="airport_list">
        <item>Calgary YYC</item>
        <item>Montréal YUL</item>
        <item>Ottawa YOW</item>
        <item>Québec YQB</item>
        <item>Toronto YYZ</item>
        <item>Vancouver YVC</item>
        <item>Winnipeg YWG</item>
    </string-array>
    <string-array name="airline_list">
        <item>Air Canada</item>
        <item>West Jet</item>
    </string-array>
    <string-array name="class_list">
        <item>First Class</item>
        <item>Business Class</item>
        <item>Economy Class</item>
    </string-array>
    <string-array name="passenger_count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="search_origin">Origin</string>
    <string name="search_destination">Destination</string>
    <string name="search_departure_date">Departure Date</string>
    <string name="search_return_date">Return Date</string>
    <string name="search_num_passengers">Number of Passengers</string>
    <string name="search_max_price">Maximum Price</string>
    <string name="search_airlines">Preferred Airlines</string>
    <string name="search_class">Preferred Class</string>
    <string name="search_nonstop">Nonstop</string>
    <string name="search_refundable">Refundable</string>
    <string name="search_button_advanced">Advanced Options</string>
    <string name="search_button_search">Search</string>

    <!-- View Flights Activity -->
    <string name="view_flights_const_flight">Flight:</string>
    <string name="view_flights_flight_path">%1$s - %2$s</string>
    <string name="view_flight_sort_by">Sort by:</string>
    <string name="view_flight_sort_price">Price</string>
    <string name="view_flight_sort_time">Time</string>
    <string name="view_flight_sort_duration">Duration</string>
    <string name="address_line">ADDRESS LINE</string>
    <string name="address">Address</string>
    <string name="city">CITY</string>
    <string name="country">COUNTRY</string>
    <string name="card_details">Card Details</string>
    <string name="full_name">FULL NAME</string>
    <string name="postal_code">POSTAL CODE</string>
    <string name="purchase">Purchase</string>

    <!-- Flight Summary Screen -->
    <string name="flight_summary_title">Trip Summary</string>

    <!-- Payment Screen -->
    <string-array name="countries">
        <item>Canada</item>
    </string-array>
    <string-array name="provinces">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland</item>
        <item>Nova Scotia</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Northwest Territories</item>
        <item>Nunavut</item>
        <item>Yukon</item>
    </string-array>
    <string name="passenger_id">Passenger ID:</string>
    <string name="booked_flights">Booked Flights</string>

    <!-- Ticket Screen -->
    <string name="ticket_flight">FLIGHT</string>
    <string name="ticket_from">FROM</string>
    <string name="ticket_to">TO</string>
    <string name="ticket_depature_time">DEPARTURE</string>
    <string name="ticket_arrival_time">ARRIVAL</string>
    <string name="ticket_duration">DURATION</string>
    <string name="ticket_boarding_time">BOARDING</string>
    <string name="ticket_gate">GATE</string>
    <string name="ticket_seat">SEAT</string>
    <string name="ticket_passenger">PASSENGER</string>

</resources>
