<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:weightSum="1">
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_trip_type"
            android:entries="@array/trip_type"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:scrollbars="vertical"
        android:smoothScrollbar="true" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:id="@+id/search_advanced_settings_checkboxes">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/search_nonstop"
                android:id="@+id/checkBox_search_nonstop"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>
        <Space
                android:layout_width="10dp"
                android:layout_height="10dp"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/search_refundable"
                android:id="@+id/checkBox_search_refundable"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:layout_marginTop="10dp"
            android:gravity="center|bottom"
            android:weightSum="1">
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/search_button_advanced"
                android:id="@+id/button_search_advance"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/search_button_search"
                android:id="@+id/button_search_search"/>
    </LinearLayout>
</LinearLayout>