<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_ticket_passenger_name_title"
            android:text="@string/ticket_passenger"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:id="@+id/textView_ticket_passenger_name"
            android:text="generic name"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
            android:id="@+id/ticket_from_flight_code_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/ticket_flight"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    <TextView
            android:id="@+id/ticket_flight_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="AC 123"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
        <ImageView
                android:id="@+id/imageView_ticket_airline"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_aircanada"
                android:layout_gravity="center"/>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_gravity="center">
            <TextView
                    android:id="@+id/ticket_from_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/ticket_from"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                    android:id="@+id/ticket_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="airport a"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                    android:id="@+id/ticket_to_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/ticket_to"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                    android:id="@+id/ticket_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="aiport b"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="0.9">
            <TextView
                    android:id="@+id/textView_ticket_departure_time_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/ticket_depature_time"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/textView_ticket_arrival_time_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/ticket_arrival_time"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/textView_ticket_duration_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/ticket_duration"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="0.9">
            <TextView
                    android:id="@+id/textView_ticket_departure_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="Nov 11 09:00"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/textView_ticket_arrival_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="Nov 11 13:15"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/textView_ticket_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="04H 15M"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="0.9">
            <TextView
                    android:id="@+id/textView_ticket_boarding_time_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/ticket_boarding_time"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/textView_ticket_gate_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/ticket_gate"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/textView_ticket_seat_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/ticket_seat"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="0.9">
            <TextView
                    android:id="@+id/textView_ticket_boarding_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="Nov 11 08:15"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/textView_ticket_gate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="N/A"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/textView_ticket_seat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="1A"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/imageView_ticket_QR_code"
            android:src="@mipmap/ic_test_qr_code"/>

</LinearLayout>