<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_background">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="right"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@color/colorSecondaryTransparent"
            android:id="@+id/button_home_account_info">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/home_greeting"
                    android:textColor="@android:color/white"
                    android:id="@+id/textView_home_greeting"
                    android:layout_gravity="center_vertical|right"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:id="@+id/imageView_home_account_icon"
                    android:src="@drawable/ic_person"
                    android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/home_signin"
                android:textColor="@android:color/white"
                android:id="@+id/textView_home_signin"
                android:layout_gravity="center"/>
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="right"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/title_activity_search"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@color/colorSecondaryTransparent"
            android:id="@+id/button_home_search"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="right"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/title_activity_checkin"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@color/colorSecondaryTransparent"
            android:id="@+id/button_home_checkin"/>
</LinearLayout>

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
              <!--android:orientation="vertical"-->
              <!--android:layout_width="match_parent"-->
              <!--android:layout_height="match_parent"-->
              <!--android:weightSum="1">-->
    <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.1">-->
        <!--<ImageView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="250dp"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:id="@+id/imageView_home_app_icon"-->
                <!--android:src="@drawable/ic_logo"-->
                <!--android:layout_gravity="center"/>-->
        <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
                <!--android:text="@string/app_name"-->
                <!--android:textStyle="bold"-->
                <!--android:id="@+id/textView_home_title"-->
                <!--android:layout_gravity="center_horizontal"/>-->
    <!--</LinearLayout>-->
    <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="0.9"-->
            <!--android:gravity="center|bottom">-->
        <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:gravity="center_horizontal">-->
            <!--<Button-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="0.5"-->
                    <!--android:text="@string/common_login"-->
                    <!--android:id="@+id/button_home_login"/>-->
            <!--<Button-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="0.5"-->
                    <!--android:text="@string/common_signup"-->
                    <!--android:id="@+id/button_home_signup"/>-->
        <!--</LinearLayout>-->
        <!--<Button-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:text="@string/title_activity_search"-->
                <!--android:id="@+id/button_home_search"/>-->
        <!--<Button-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:text="@string/title_activity_checkin"-->
                <!--android:id="@+id/button_home_checkin"/>-->
    <!--</LinearLayout>-->
<!--</LinearLayout>-->